# qadx

./: .gitmodules  CMakeLists.txt  README.md  docker_run.sh  main.cpp  todo
cmake/modules/: FindLibdrm.cmake
docker/: Dockerfile
include/: arguments.hpp  backend.hpp  endpoint.hpp  enumerations.hpp  field_allocs.hpp  image.hpp  network_session.hpp  server.hpp  string_utils.hpp  websocket_server.hpp
include/backends/: input.hpp  screen.hpp
include/backends/input/: base_input.hpp  common.hpp  evdev.hpp  uinput.hpp
include/backends/screen/: base_screen.hpp  generic_screens.hpp  ilm.hpp  kms.hpp  kms_page_flip.hpp
scripts/: arm64_docker_run.sh  x86_docker_run.sh
src/: endpoint.cpp  input_device_guess.cpp  network_session.cpp  server.cpp  string_utils.cpp  uinput_device_guess.cpp  websocket_server.cpp
src/backends/input/: common.cpp  uinput.cpp
src/backends/screen/: ilm.cpp  kms.cpp  kms_page_flip.cpp
src/images/: bmp.cpp  png.cpp
websocket_test/: CMakeLists.txt  test.cpp
